# rusty-dash

./: README.md  setup-debian.sh
.github/workflows/: build.yml  release.yaml
dash/: Cargo.toml  README.md
dash/src/: android_auto.rs  main.rs  music.rs  settings.rs
dash/src/music/: player.rs
dash/ui/: base.slint  custom-components.slint  main.slint
dash/ui/music/: player.slint
dash/ui/pages/: android_auto.slint  home.slint  home_page.slint  library.slint  music.slint  music_library.slint  settings.slint  settings_page.slint
src/etc/systemd/system/: dash.service  startup.service
src/storage/: boot.sh  settings.conf
