[package]
name = "rusty-dash"
version = "0.0.15"
edition = "2024"
default-run = "rusty-dash"

[dependencies]
slint = { git = "https://github.com/slint-ui/slint", features = ["backend-linuxkms"] }
android-auto = { version = "*", features = ["usb"] }
system_shutdown = "*"
ringbuf = "*"
tokio = { version = "*", features = ["full"] }
cpal = "*"
openh264 = "*"
log = "*"
simple_logger = "*"
async-trait = "*"
rodio = "*"
image = "*"

[build-dependencies]
slint-build = { git = "https://github.com/slint-ui/slint" }


[[bin]]
name = "screenshot"
path = "src/bin/screenshot.rs"

# This patch is needed for the v1 certificate in android-auto's src/cert.rs
[patch.crates-io]
rustls-webpki = { git = "https://github.com/uglyoldbob/webpki", branch = "main5" }

[profile.release]
strip = true
opt-level = 3
lto = true
panic = "abort"
codegen-units = 1

[profile.dev]
opt-level = 0

[profile.dev.package."*"]
opt-level = 3

[profile.screenshot] # Faster compile time
inherits = "release"
strip = true
opt-level = 0
lto = false
codegen-units = 16
panic = "abort"

[profile.screenshot.package."*"]
opt-level = 0
