[package]
name = "rusty-dash"
version = "0.0.17"
edition = "2024"
default-run = "rusty-dash"

[dependencies]
slint = { git = "https://github.com/slint-ui/slint", features = ["backend-linuxkms"] }
android-auto = { git = "https://github.com/AlexJonker/android-auto", features = ["usb"] }
system_shutdown = "*"
ringbuf = "*"
tokio = { version = "*", features = ["full"] }
cpal = "*"
openh264 = "*"
log = "*"
simple_logger = "*"
async-trait = "*"
rodio = "*"
image = "*"
rustls-webpki = "*"

[build-dependencies]
slint-build = { git = "https://github.com/slint-ui/slint" }


[[bin]]
name = "screenshot"
path = "src/bin/screenshot.rs"

[profile.release]
strip = true
opt-level = 3
lto = true
panic = "abort"
codegen-units = 1

[profile.dev]
opt-level = 0

[profile.dev.package."*"]
opt-level = 3

[profile.screenshot] # Faster compile time
inherits = "release"
opt-level = 0
lto = false
codegen-units = 16

[profile.screenshot.package."*"]
opt-level = 0
