[package]
name = "rusty-dash"
version = "0.0.18"
edition = "2024"
default-run = "rusty-dash"

[dependencies]
slint = { version = "1.16.1", features = ["backend-linuxkms"] }
android-auto = { git = "https://github.com/AlexJonker/android-auto", features = ["usb"] }
system_shutdown = "4.1.0"
ringbuf = "0.5.0"
tokio = { version = "1.52.3", features = ["full"] }
cpal = "0.18.1"
openh264 = "0.9.3"
log = "0.4.32"
simple_logger = "5.2.0"
async-trait = "0.1.89"
rodio = "0.22.2"
image = "0.25.10"

[build-dependencies]
slint-build = "1.16.1"

[[bin]]
name = "screenshot"
path = "src/bin/screenshot.rs"

[profile.release]
strip = true
opt-level = 3
lto = true
panic = "abort"
codegen-units = 1

[profile.screenshot] # Faster compile time
inherits = "release"
opt-level = 0
lto = false
codegen-units = 16

[profile.screenshot.package."*"]
opt-level = 0
